# multipass-mcp

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml
examples/: claude_agent_query.py  create-instance.py  list-images.py  list-instances.py  list-snapshots.py
multipass_mcp/: client.py  multipass.py  server.py
multipass_mcp/commands/: alias_commands.py  config_commands.py  image_commands.py  instance_commands.py  network_commands.py  snapshot_commands.py  storage_commands.py
multipass_mcp/models/: alias.py  image.py  instance.py  network.py  snapshot.py  version.py
tests/: client_test.py  commands_test.py  multipass_test.py  server_test.py
